trying to fix overflow issues with authentication page.

--- a/src/pages/Authentication.module.scss
+++ b/src/pages/Authentication.module.scss
@@ -1,15 +1,16 @@
 @import '../styles/custom-properties.scss';
 
 :root {
-  --button-color: #4285f4;
+  --button-color: var(--color-pallette-accent);
 }
 
 .authentication {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  min-width: 100vw;
+  max-width: 100vw;
+  min-height: 100vh;
   max-height: 100vh;
   z-index: 990;
   background-color: var(--overlay);
@@ -19,6 +20,7 @@
 .split {
   display: flex;
   justify-content: center;
+  max-width: 100vw;
 }
 .imageHalf {
   background-image: url('../assets/stopSign.jpg');
@@ -56,8 +58,7 @@
 .facebookAuthButton,
 .googleAuthButton {
   width: auto;
-  min-width: 250px;
-  max-width: 420px;
+  max-width: 100%;
   min-height: 3rem;
   display: flex;
   flex-direction: row;
